# mecanum-restaurant-robot

./: CMakeLists.txt  README.md  package.xml
config/: bridge.yaml  ekf.yaml  mecanum_bot.rviz  nav2_params.yaml  slam_toolbox_params.yaml  tables.yaml
launch/: gui.launch.py  nav2.launch.py  rviz.launch.py  sim.launch.py  slam.launch.py
models/mecanum_bot/: model.config  model.sdf
models/mecanum_bot/meshes/: generate_meshes.py  mecanum_roller.stl  wheel_frame.stl
scripts/: clock_relay.py  ign_tf_relay.py  odom_tf_broadcaster.py  restaurant_gui.py
urdf/: mecanum_bot.urdf.xacro
worlds/: mecanum_world.sdf  restaurant_world.sdf
