<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanum_bot</name>
  <version>0.0.1</version>
  <description>4-wheel mecanum robot simulation in Ignition Gazebo Fortress with LiDAR</description>
  <maintainer email="sam@example.com">Sam</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>tf2_ros</depend>

  <!-- Localisation -->
  <depend>robot_localization</depend>

  <!-- SLAM -->
  <depend>slam_toolbox</depend>

  <!-- Nav2 stack -->
  <depend>nav2_bringup</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_rviz_plugins</depend>
  <depend>dwb_core</depend>
  <depend>dwb_critics</depend>

  <!-- Operator GUI -->
  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>python3-tk</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
